--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.17.3",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
